--- a/src/makefile
+++ b/src/makefile
@@ -1,7 +1,7 @@
 engine:
-	clang++ -std=c++20 -O3 -march=native -static -Wall -g -o wiltest Wilted.cpp Generator.cpp Position.cpp Moment.cpp
+	clang++ -std=c++20 -O3 -march=native -static -Wall -g -o wiltest Wilted.cpp Generator.cpp Position.cpp
 
 alternate:
-	clang++ -std=c++20 -O3 -mbmi2 -static -Wall -g -o wiltest Wilted.cpp Generator.cpp Position.cpp Moment.cpp
+	clang++ -std=c++20 -O3 -mbmi2 -static -Wall -g -o wiltest Wilted.cpp Generator.cpp Position.cpp
 
 # -fconstexpr-steps=...
