--- a/src/makefile
+++ b/src/makefile
@@ -1,7 +1,7 @@
-EXE := Wilted-0-3-1-3
+EXE := Wilted-0-4-0-0
 #no evalfile yet
 ARCH := native
-SOURCES := Wilted.cpp Engine.cpp Searcher.cpp Evaluator.cpp Generator.cpp Position.cpp
+SOURCES := Wilted.cpp Engine.cpp TeaTable.cpp Searcher.cpp Evaluator.cpp Generator.cpp Position.cpp
 
 CXX := clang++
 
@@ -23,8 +23,8 @@ $(EXE):
 
 # During Development, frequent compilation
 
-engine: Wilted.o Position.o Generator.o Evaluator.o Searcher.o Engine.o
-	$(CXX) Wilted.o Engine.o Searcher.o Evaluator.o Generator.o Position.o $(CXXFLAGS) -o $(EXE)
+engine: Wilted.o Position.o Generator.o Evaluator.o Searcher.o Engine.o TeaTable.o
+	$(CXX) Wilted.o Engine.o TeaTable.o Searcher.o Evaluator.o Generator.o Position.o $(CXXFLAGS) -o $(EXE)
 
 Wilted.o: Wilted.cpp
 	$(CXX) $(CXXFLAGS) -c Wilted.cpp -o Wilted.o
