--- a/src/datagen/makefile
+++ b/src/datagen/makefile
@@ -1,12 +1,12 @@
 EXE := WiltedGen-2-0-0
-
+EVALFILE ?= ../wilted-net-1-0.bin
 ARCH := native
 
 SOURCES := Datagen.cpp Match.cpp Game.cpp ../Interface.cpp ../Engine.cpp ../History.cpp ../TeaTable.cpp ../Searcher.cpp ../Evaluator.cpp ../Performer.cpp ../Generator.cpp ../Position.cpp
 
 CXX := clang++
 
-CXXFLAGS := -std=c++20 -O3 -march=$(ARCH) -static -Wall -g
+CXXFLAGS := -std=c++20 -O3 -march=$(ARCH) -static -Wall -g -DEVALFILE=\"$(EVALFILE)\"
 
 SUFFIX :=
 
