--- a/src/makefile
+++ b/src/makefile
@@ -1,10 +1,10 @@
-EXE := Wilted-1-1-1-6
+EXE := Wilted-1-1-2-0
 EVALFILE ?= wilted-net-1-4.bin
 ARCH := native
 SOURCES := *.cpp
 CXX := clang++
 
-CXXFLAGS := -std=c++20 -O3 -march=$(ARCH) -Wall -g
+CXXFLAGS := -std=c++20 -O3 -march=$(ARCH) -pthread -Wall -g
 #-fconstexpr-steps=...
 
 SUFFIX :=
